fix: add consistent punctuation

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: '💡 Feature Request'
 title: '[Feature Request] '
-description: 'Suggest an idea'
+description: 'Suggest an idea.'
 labels: ['type: feature', 'needs triage']
 
 body:
