--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: '🐞 Bug Report'
 title: '[Bug] '
-description: 'Report a bug'
+description: 'Report a bug.'
 labels: ['type: bug', 'needs triage']
 
 body:
