--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -16,7 +16,7 @@ body:
     id: 'description'
     attributes:
       label: 'Describe the bug'
-      description: 'A clear description of what the bug is. Include screenshots if applicable.'
+      description: 'A clear description of what the bug is. What behavior was expected? Include screenshots if applicable.'
     validations:
       required: true
 
@@ -29,11 +29,13 @@ body:
   - type: 'textarea'
     id: 'logs'
     attributes:
-      label: 'Stack trace or error logs (if relevant)'
-      render: 'text'
+      label: 'Stack trace or error logs (if applicable)'
+      render: 'shell'
 
-  - type: 'textarea'
-    id: 'context'
+  - type: 'input'
+    id: 'version'
     attributes:
-      label: 'Additional info/context'
-      description: 'Add any other context about the problem here.'
+      label: 'Version number'
+      description: 'What version are you running?'
+    validations:
+      required: true
